# dev-tools-archive

./: .gitignore  README.md
docs/superpowers/context/: 2026-07-13-polygon-codec-session-context.md
docs/superpowers/designs/: 2026-07-13-polygon-codec-coordinate-scale.md
docs/superpowers/plans/: 2026-07-03-polygon-codec-lib.md
polygon_bench/: CMakeLists.txt  Makefile  README.md  build.sh
polygon_bench/schemas/: polygon.proto
polygon_bench/src/: bench.cpp  bench.h  generate.cpp  generate.h  main.cpp  polygon_types.cpp  polygon_types.h  rss.cpp  rss.h  varint.cpp  varint.h
polygon_bench/src/encoders/: bin_fixed.cpp  bin_fixed.h  bin_offset_varint.cpp  bin_offset_varint.h  boost_bin.cpp  boost_bin.h  delta_varint.cpp  delta_varint.h  delta_windowmin_varint.cpp  delta_windowmin_varint.h  encoder.h  json_arr.cpp  json_arr.h  json_obj.cpp  json_obj.h  json_utils.h  mini_pbuf.cpp  mini_pbuf.h
polygon_bench/tests/: test_roundtrip.cpp
polygon_codec/: CMakeLists.txt  Makefile  README.md  build.sh  codec.cc  codec.h  codec_factory.cc  codec_factory.h  codec_frame.cc  codec_frame.h  codec_metrics.cc  codec_metrics.h  status.h  types.h  varint.cc  varint.h
polygon_codec/algorithms/: algorithm_codec.h  bin_fixed.cc  bin_fixed.h  bin_offset_varint.cc  bin_offset_varint.h  boost_bin.cc  boost_bin.h  delta_varint.cc  delta_varint.h  delta_windowmin_varint.cc  delta_windowmin_varint.h  pbuf.cc  pbuf.h
polygon_codec/bench-perftest/: generate.cc  generate.h  main.cc  report.cc  report.h
polygon_codec/build_make/: polygon_codec_bench  polygon_codec_tests
polygon_codec/tests/: test_codec.cc
